2011-02-22  Francois Felix Ingrand  <felix@cturtle>
	* Push to 1.0b11 to fix my mess... 

	* configure.ac: Push the release to 1.0b10 to fix the 32/64 bits
	problem with the message passer.

	* Minor esthetic changes...

	* oprs-cat.c (get_bytes): Fixed an annoying message when the xoprs
	quit properly.

2011-02-22  Francois Ingrand  <felix@pr2c1>

	* send-message.c: Another 32/64 bits problem... with the message
	passer on 64 bits machines. I now use uint32_t everywhere...

2011-02-20  Francois Felix Ingrand  <felix@ingrand.net>

	* parser-funct.c (replace_env_string):
	* oprs-parser.y : One can now specify environment
	variables (e.g. ${HOME}, ${ROBOTPKG_BASE}) in the "set
	oprs_data_path" command.

2011-02-18  Francois Felix Ingrand  <felix@ingrand.net>

	* mp-register.c (read_int_from_socket): fix a 32/64 bits problem
	when the message passer and the client are running on 64 vs. 32
	bits.

	* configure.ac: push the version to 1.09beta

 2011-02-17  Felix Ingrand  <felix@cturtle>

	* Modified the ope (OP Editor) so it does not start a graphical display when
	generating .tex doc files. As a result, the installation should
	not require a running X11 server anymore.

2011-02-07  Felix Ingrand  <felix@cturtle>

	* site.make.in and Makefile.in : do some clean up in the FLAGS mess...

2011-01-21  Francois Felix Ingrand  <felix@ingrand.net>

	* ev-predicate.c, ev-predicate.h, ev-predicate_f-pub.h, opaque-pub.h,
		  oprs-pred-func.c Clean up the evaluable predicate types to
		  make them more  acceptable to C++ code. (for PR2/ROS)

2011-01-20  Francois Felix Ingrand  <felix@ingrand.net>

	* mp.c (get_and_buffer_message): adjust some type casting for printing.

2010-11-23  Francois Felix Ingrand  <felix@ingrand.net>

	* configure.ac: Bump version number to 1.08 Beta.

2010-10-08  Francois Felix Ingrand  <felix@ingrand.net>

	* ev-predicate.c (declare_eval_pred): Use LONG-LONGP instead of
		  LONG_LONGP (to remain consistent with predicate/function name.
