@@ -130,6 +130,18 @@ It will add the fact (WAKE-UP-INTENTION $ID) in the activation condition." 4 139
 ) (
 ) (
 ) )
+(|Tcl Command| (
+(INVOCATION INVOCATION (! (TCL-COMMAND $COMMAND)) 10 50 1 60 0 )
+(CONTEXT CONTEXT () 10 150 0 60 0 )
+(CALL CALL_NODE (TCL-COMMAND $COMMAND) 10 100 1 60 0 )
+(SETTING SETTING  10 250 0 60 0 )
+(EFFECTS EFFECTS () 10 350 0 60 0 )
+(ACTION ACTION (TCL-COMMAND $COMMAND) 310 50 1 60 0 )
+(DOCUMENTATION DOCUMENTATION "This OP executes the tcl command given as argument." 18 146 1 60 0 )
+(PROPERTIES PROPERTIES  10 400 0 60 0 )
+) (
+) (
+) )
 (|Fail| (
 (INVOCATION INVOCATION (! (FAILED)) 10 50 1 60 0 )
 (CONTEXT CONTEXT () 10 150 0 60 0 )
