@@ -1,0 +1,2 @@
+void start_tcl_interpreter();
+void  exec_tcl_command(char *string);
