@@ -362,7 +362,9 @@ static XrmOptionDescRec options[] = {
    {"-L",	"",	XrmoptionSkipArg,	NULL},
    {"-h",	"",	XrmoptionSkipNArgs,	0},
    {"-q",	"",	XrmoptionSkipNArgs,	0},
+   {"-t",	"",	XrmoptionSkipNArgs,	0},
    {"-a",	"",	XrmoptionSkipNArgs,	0},
+   {"-A",	"",	XrmoptionSkipNArgs,	0},
    {"-p",	"",	XrmoptionSkipNArgs,	0},
    {"-c",	"",	XrmoptionSkipArg,	NULL},
    {"-x",	"",	XrmoptionSkipArg,	NULL},
