@@ -1,3 +1,10 @@
+2011-02-25  Felix Ingrand  <felix@cturtle>
+
+	* tcl.c (start_tcl_interpreter): First cut at sending commands to
+	a tcl interpreter. Fork a tclsh, and send it commands over a
+	socketpair. Added an action for this, and added an OP in
+	new-default.opf which can call this action.
+
 2011-02-22  Francois Felix Ingrand  <felix@cturtle>
 	* Push to 1.0b11 to fix my mess... 
 
